# llm-fine-tuning

./: .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: evaluate.yml  lint.yml  tests.yml
configs/data/: synthetic_config.yaml
configs/model/: HARDWARE_REQUIREMENTS.md  llama31_8b_qlora.yaml  qwen25_15b.yaml  tinyllama_1b.yaml
configs/training/: dpo.yaml  sft_lora.yaml  sft_qlora.yaml
notebooks/: 01_eda.ipynb  02_token_analysis.ipynb  03_results.ipynb
scripts/: evaluate.py  generate_data.py  inference.py  train.py
src/llm_finetuning/: __init__.py  config.py  constants.py
src/llm_finetuning/data/: loader.py  preprocessor.py  synthetic_generator.py  templates.py
src/llm_finetuning/evaluation/: inference.py  metrics.py
src/llm_finetuning/models/: loader.py  peft_config.py  utils.py
src/llm_finetuning/training/: callbacks.py  metrics.py  trainer.py
src/llm_finetuning/utils/: logging.py  seed.py
tests/: conftest.py  test_data_loader.py  test_evaluation_metrics.py  test_model_loader.py  test_peft_config.py  test_preprocessor.py  test_synthetic_generator.py  test_training_config.py
